--- a/src/app/header/login-form/login-form.component.css
+++ b/src/app/header/login-form/login-form.component.css
@@ -1,14 +1,3 @@
-.container {
-    height: 270px;
-    max-height: 270px;
-    position: absolute;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    top: 0;
-    margin: auto;
-    z-index: 2;
-}
 .ng-valid, .ng-invalid {
   border: 0;
 }
@@ -23,7 +12,7 @@
     transition: background-color .3s ease;
 }
 h2 {
-    margin: 0 0 60px;
+    margin: 80px 0;
 }
 .login .btn {
     margin-bottom: 0px;
@@ -42,16 +31,16 @@ h2 {
     border-radius: 0;
     font-size: 18px;
 }
+.login input {
+  transition: 1s height;
+}
+.login button,
+.login input[type=submit] {
+  width: 50%;
+  float: left;
+}
 .error {
-    padding: 0 50px;
-}
-#register {
     padding: 50px;
-    font-size: 16px;
-}
-#register .link {
-    font-weight: 600;
-    color: #fff;
 }
 
 /* For tablets and smart phones */
@@ -88,8 +77,7 @@ h2 {
     .login {
         padding: 0px;
     }
-    #register {
-        padding: 25px;
-        font-size: 15px;
+    .error {
+        padding: 25px 50px;
     }
 }
