--- a/src/app/header/search-form/search-form.component.css
+++ b/src/app/header/search-form/search-form.component.css
@@ -1,14 +1,3 @@
-.container {
-    height: 270px;
-    max-height: 270px;
-    position: absolute;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    top: 0;
-    margin: auto;
-    z-index: 2;
-}
 .inner-addon {
     position: relative;
 }
@@ -24,7 +13,7 @@
     padding-right: 30px;
 }
 h2 {
-    margin: 0 0 60px;
+    margin: 80px 0;
 }
 .btn {
     padding: 15px 20px;
@@ -41,6 +30,7 @@ h2 {
     background-color: rgba(23,41,53,.8);
     padding: 40px;
     margin-top: -2px;
+    margin-bottom: 60px;
 }
 .tab-content input {
     height: 54px;
