--- a/src/app/review/flagged-comments.component.html
+++ b/src/app/review/flagged-comments.component.html
@@ -6,9 +6,9 @@
       <tr>
         <th>#</th>
         <th>{{ 'COMMENT.CONTENT' | translate }}</th>
-        <th>{{ 'COMMENT.USER' | translate }}</th>
-        <th>{{ 'COMMENT.REPLIES' | translate }}</th>
-        <th>{{ 'COMMENT.FLAGGED' | translate }}</th>
+        <th class="hidden-xs">{{ 'COMMENT.USER' | translate }}</th>
+        <th class="hidden-xs">{{ 'COMMENT.REPLIES' | translate }}</th>
+        <th class="hidden-xs">{{ 'COMMENT.FLAGGED' | translate }}</th>
         <th class="text-center">{{ 'COMMENT.UNFLAG' | translate }}</th>
         <th class="text-center">{{ 'COMMENT.REMOVE' | translate }}</th>
       </tr>
@@ -17,9 +17,9 @@
       <tr *ngFor="let comment of comments">
         <td>{{ comment.id }}</td>
         <td (click)="toggleFullContent()">{{ comment.content | truncate : contentSize }}</td>
-        <td>{{ comment.user.email }}</td>
-        <td>{{ comment.replies_count }}</td>
-        <td>{{ comment.updated_at | date:'mediumDate' }}</td>
+        <td class="hidden-xs">{{ comment.user.email }}</td>
+        <td class="hidden-xs">{{ comment.replies_count }}</td>
+        <td class="hidden-xs">{{ comment.updated_at | date:'mediumDate' }}</td>
         <td class="text-center" id="ok" (click)="unflag(comment.id)"><span class="glyphicon glyphicon-ok"></span></td>
         <td class="text-center" id="remove" (click)="remove(comment.id)"><span class="glyphicon glyphicon-remove"></span></td>
       </tr>
