--- a/src/app/spots/spots-top/spots-top.component.html
+++ b/src/app/spots/spots-top/spots-top.component.html
@@ -1,6 +1,6 @@
 <div class="container-fluid">
 	<div class="row">
-		<h2 class="hidden-xs">Populiariausios vietos</h2>
+		<h2 class="hidden-xs">{{ 'TITLES.TOP_SPOTS' | translate }}</h2>
 	</div>
 	<div class="row">
 		<div class="container top-places">
@@ -18,7 +18,11 @@
 							<div class="row">
 								<div class="col-md-4 col-xs-4"><p>{{ spot.rating }} <span class="glyphicon glyphicon-star"></span></p></div>
 								<div class="col-md-4 col-xs-4"><p>{{ spot.beenHere}} <span class="glyphicon glyphicon-eye-open"></span></p></div>
-								<div class="col-md-4 col-xs-4"><p><img [src]="'assets/images/' + decode(spot.category) + '.png'" /></p></div>
+								<div class="col-md-4 col-xs-4">
+                  <p>
+                    <img [src]="'https://s3-eu-west-1.amazonaws.com/sportenjoy-files-upload/categories/' + decode(spot.category) + '.png'" />
+                  </p>
+                </div>
 							</div>
 						</div>
 					</div>
